[package]
name = "gameprng"
version = "0.1.0"
authors = ["David \"Dregel\" Bengtsson <david@witchcult.se>"]
description = "A simple PRNG library for game development, written in Rust."
keywords = ["math", "game", "prng", "random", "dice"]
license ="MIT"
repository = "https://github.com/WitchcultGames/gameprng"

[dependencies]
